2009-02-24  Michael Wiegand <michael.wiegand@intevation.de>

	Added support for parsing multiple definitions per OVAL file, made XML
	parsing more robust. Please note that the usefulness of this change is
	limited at the moment, since support for multiple results and updated
	ovaldi support is not yet present in the code, but expected to arrive
	shortly.

	* oval_plugins.c: (start_element, text, end_element) Made XML parsing
	more stateful and robust. (text) Fix to remove superflous whitespaces
	in definition titles. (ovaldi_launch) Temporarily included dummy
	values in OVAL system_info element for testing.

2009-02-19  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Set default value for Silent Dependencies to 'No'. Naive users otherwise
	might miss some security issues due to suppression of messages coming
	from the server through NVTs that other NVTs just depend on.

	* openvasd/preferences.d: Set default value for silent_dependencies
	to 'no'.

2009-02-19  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/preferences.d: Documentation and minor formatting.
	Added a FIXME about possible conflict with a new scan overiding
	preference values of running scans.

2009-02-17  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/preferences.c (preferences_new): Fixed minor spelling errors
	in comments of newly created preferences files.

2009-02-17  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Set PROJECT_NUMBER to 2.0.2.SVN.

2009-02-17  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-server 2.0.1 release.

	* CHANGES: Updated.

	* README: Extended instructions for server setup.

	* ChangeLog: Tidied.

	* VERSION: Set to 2.0.1.

	* doc/Doxyfile, doc/Doxyfile_full: Set PROJECT_NUMBER to 2.0.1.

2009-02-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Minor documentation added / transformed into agreed format.